...
        android:padding="@dimen/linearlayout_dialog_headers_padding"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_dialog_headers_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/textview_dialog_headers_label_margin"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:text="@string/label_dialog_headers_global_headers" />
...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/relativelayout_dialog_headers_restore_padding">

                <ImageView
                    android:id="@+id/imageview_dialog_headers_restore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/label_dialog_headers_restore"
                    app:srcCompat="@drawable/icon_restore_selector" />

                <TextView
                    android:id="@+id/textview_dialog_headers_restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/imageview_dialog_headers_restore"
                    android:layout_marginTop="@dimen/textview_dialog_headers_restore_margin_top"
                    android:textStyle="bold"
...

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_dialog_headers_headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/listview_dialog_headers_margin"
            android:padding="@dimen/listview_dialog_headers_padding"
            android:layout_gravity="fill_horizontal"
            android:scrollbars="none" />

        <ImageView
            android:id="@+id/imageview_dialog_headers_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_headers_edit_header"
            app:srcCompat="@drawable/icon_add_selector" />
...
