...
    android:id="@+id/layout_list_item_suspension_interval"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_list_item_header_no_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/textview_list_item_header_margin"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"
        android:text="@string/text_dialog_headers_no_headers" />
...
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_headers_delete_header"
                app:srcCompat="@drawable/icon_delete_selector" />

            <TextView
                android:id="@+id/textview_list_item_header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/imageview_list_item_header_delete"
                android:textStyle="bold"
                android:singleLine="true"
                android:textSize="@dimen/list_item_header_text_size_name"
                android:ellipsize="end"
                android:text="" />

            <TextView
                android:id="@+id/textview_list_item_header_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_list_item_header_name"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/textview_list_item_header_value_margin_top"
                android:layout_marginEnd="@dimen/textview_list_item_header_value_margin_end"
...
