/*
 * Copyright (c) 2026 Alwin Ibba
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package net.ibbaa.keepitup.ui.dialog;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.action.ViewActions.scrollTo;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.CoreMatchers.containsString;
import static org.hamcrest.CoreMatchers.not;
import static org.hamcrest.Matchers.allOf;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertTrue;

import android.os.Bundle;

import androidx.test.core.app.ActivityScenario;
import androidx.test.espresso.action.ViewActions;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.MediumTest;

import net.ibbaa.keepitup.R;
import net.ibbaa.keepitup.db.DBSetup;
import net.ibbaa.keepitup.model.Header;
import net.ibbaa.keepitup.model.HeaderType;
import net.ibbaa.keepitup.test.mock.TestRegistry;
import net.ibbaa.keepitup.ui.BaseUITest;
import net.ibbaa.keepitup.ui.DefaultsActivity;
import net.ibbaa.keepitup.ui.sync.HeaderSyncHandler;
import net.ibbaa.keepitup.util.BundleUtil;

import org.junit.Test;
import org.junit.runner.RunWith;

import java.util.Collections;
import java.util.List;

@MediumTest
@SuppressWarnings({"SequencedCollectionMethodCanBeUsed"})
@RunWith(AndroidJUnit4.class)
public class HeadersDialogTest extends BaseUITest {

    private ActivityScenario<?> activityScenario;

    @Test
    public void testDialogConfiguration() {
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(Collections.emptyList(), 1, "Custom title", false);
        onView(withId(R.id.textview_dialog_headers_label)).check(matches(withText("Custom title")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("No headers defined")));
        assertEquals(1, dialog.getNetworkTaskId());
        assertEquals(0, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testDialogConfigurationScreenRotation() {
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(Collections.emptyList(), 1, "Custom title", false);
        onView(withId(R.id.textview_dialog_headers_label)).check(matches(withText("Custom title")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("No headers defined")));
        rotateScreen(activityScenario);
        assertEquals(1, dialog.getNetworkTaskId());
        assertEquals(0, getDialog().getAdapter().getAllItems().size());
        onView(withId(R.id.textview_dialog_headers_label)).check(matches(withText("Custom title")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("No headers defined")));
        rotateScreen(activityScenario);
        assertEquals(1, dialog.getNetworkTaskId());
        assertEquals(0, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testDialogConfigurationWithRestoreAndHeaders() {
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(List.of(getHeader(1), getHeader(2)), 2, "Title", true);
        onView(withId(R.id.textview_dialog_headers_label)).check(matches(withText("Title")));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(isDisplayed()));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(withText("Restore default headers")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        assertEquals(2, dialog.getNetworkTaskId());
        assertEquals(2, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testDialogConfigurationWithRestoreAndHeadersScreenRotation() {
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(List.of(getHeader(1), getHeader(2)), 2, "Title", true);
        onView(withId(R.id.textview_dialog_headers_label)).check(matches(withText("Title")));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(isDisplayed()));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(withText("Restore default headers")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        assertEquals(2, dialog.getNetworkTaskId());
        assertEquals(2, getDialog().getAdapter().getAllItems().size());
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        assertEquals(2, dialog.getNetworkTaskId());
        assertEquals(2, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testRestoreDefaultHeadersCancel() {
        addDefaultHeader();
        resetGlobalHeaderHandler();
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(List.of(getHeader(1), getHeader(2)), 1, "Custom title", true);
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(isDisplayed()));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(withText("Restore default headers")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        onView(isRoot()).perform(waitFor(500));
        onView(withId(R.id.imageview_dialog_headers_restore)).perform(click());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Restore headers?")));
        onView(withId(R.id.textview_dialog_confirm_description)).check(matches(withText("This overwrites the current headers with the default headers.")));
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        assertEquals(1, dialog.getNetworkTaskId());
        assertEquals(2, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testRestoreDefaultHeadersCancelScreenRotation() {
        addDefaultHeader();
        resetGlobalHeaderHandler();
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(List.of(getHeader(1), getHeader(2)), 1, "Custom title", true);
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(isDisplayed()));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(withText("Restore default headers")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        rotateScreen(activityScenario);
        onView(isRoot()).perform(waitFor(500));
        onView(withId(R.id.imageview_dialog_headers_restore)).perform(click());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Restore headers?")));
        onView(withId(R.id.textview_dialog_confirm_description)).check(matches(withText("This overwrites the current headers with the default headers.")));
        onView(withId(R.id.imageview_dialog_confirm_cancel)).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        assertEquals(1, dialog.getNetworkTaskId());
        assertEquals(2, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testRestoreDefaultHeaders() {
        addDefaultHeader();
        resetGlobalHeaderHandler();
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(List.of(getHeader(1), getHeader(2)), 1, "Custom title", true);
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(isDisplayed()));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(withText("Restore default headers")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        onView(isRoot()).perform(waitFor(500));
        onView(withId(R.id.imageview_dialog_headers_restore)).perform(click());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Restore headers?")));
        onView(withId(R.id.textview_dialog_confirm_description)).check(matches(withText("This overwrites the current headers with the default headers.")));
        onView(withId(R.id.imageview_dialog_confirm_ok)).perform(click());
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("User-Agent")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Mozilla/5.0 (Linux; Android) KeepItUp/-")));
        assertEquals(1, dialog.getNetworkTaskId());
        assertEquals(1, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }

    @Test
    public void testRestoreDefaultHeadersScreenRotation() {
        addDefaultHeader();
        resetGlobalHeaderHandler();
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(List.of(getHeader(1), getHeader(2)), 1, "Custom title", true);
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(isDisplayed()));
        onView(withId(R.id.textview_dialog_headers_restore)).check(matches(withText("Restore default headers")));
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(2)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Name1")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Value1")));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Name2")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 1))).check(matches(withText("Value2")));
        rotateScreen(activityScenario);
        onView(isRoot()).perform(waitFor(500));
        onView(withId(R.id.imageview_dialog_headers_restore)).perform(click());
        onView(withId(R.id.textview_dialog_confirm_message)).check(matches(withText("Restore headers?")));
        onView(withId(R.id.textview_dialog_confirm_description)).check(matches(withText("This overwrites the current headers with the default headers.")));
        onView(withId(R.id.imageview_dialog_confirm_ok)).perform(click());
        rotateScreen(activityScenario);
        onView(withId(R.id.listview_dialog_headers_headers)).check(matches(withListSize(1)));
        onView(allOf(withId(R.id.textview_list_item_header_no_header), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(not(isDisplayed())));
        onView(allOf(withId(R.id.textview_list_item_header_name), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("User-Agent")));
        onView(allOf(withId(R.id.textview_list_item_header_value), withChildDescendantAtPosition(withId(R.id.listview_dialog_headers_headers), 0))).check(matches(withText("Mozilla/5.0 (Linux; Android) KeepItUp/-")));
        assertEquals(1, dialog.getNetworkTaskId());
        assertEquals(1, getDialog().getAdapter().getAllItems().size());
        activityScenario.close();
    }


    @Test
    public void testBasicAuthHeaderAddAndOpenWithoutPasswordChange() {
        activityScenario = launchSettingsInputActivity(DefaultsActivity.class, getBypassSystemSAFBundle());
        HeadersDialog dialog = showHeadersDialog(List.of(getHeader(1), getHeader(2)), 1, "Custom title", true);
        onView(isRoot()).perform(waitFor(500));
        onView(withId(R.id.imageview_dialog_headers_add)).perform(click());
        onView(withId(R.id.checkbox_dialog_header_edit_basic_auth)).perform(click());
